# asryx-macos

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  asryx  bootstrap  install  justfile  rlyx.toml  toggle  uninstall
.github/: CODEOWNERS
.github/actions/base-runner/: action.yml
.github/actions/base-runner-macos/: action.yml
.github/workflows/: ci.yml  on-workflow-call-build.yml  on-workflow-call-distro-smoke.yml  on-workflow-call-distros.yml  on-workflow-call-format.yml  on-workflow-call-lint.yml  on-workflow-call-runtime-safety.yml  on-workflow-call-sanitizers.yml  on-workflow-call-shell-check.yml  on-workflow-call-test.yml  release.yml
cmake/: Hardening.cmake  Sanitizers.cmake  Warnings.cmake
package/: asryx  install  uninstall
scripts/: bootstrap  check  fmt  install  install-dev-deps  lint  resolve-tool  shellcheck  uninstall
scripts/checks/: check-line-limits.py  check-module-boundaries.py  check-owned-paths.py
scripts/lib/: _common.sh  _constants.sh  _deps.sh  _dev-deps.apt  _paths.sh  _repos.sh  _runtime-deps.apt  _runtime-deps.dnf  _runtime-deps.pacman  check-line-limits.py  check-module-boundaries.py  check-owned-paths.py  check-version.py
src/: main.cpp
src/app/: app.cpp  app.hpp
src/config/: config.cpp  config.hpp
src/constants/: constants.hpp
src/engine/: diarize.cpp  diarize.hpp  engine.cpp  engine.hpp  format.cpp  format.hpp  output.cpp  testing_hooks.cpp  wav.cpp  wav.hpp
src/install/: install.cpp  install.hpp
src/model/: diarize_model.cpp  model.cpp  model.hpp
src/platform/: audio.hpp  audio_macos.mm  fs.cpp  fs.hpp  process.cpp  process.hpp
src/runtime/: render.cpp  render.hpp  runtime.cpp  runtime.hpp
tests/: CMakeLists.txt  test_app.cpp  test_config.cpp  test_helpers.hpp  test_install.cpp  test_lock.cpp  test_main.cpp  test_model.cpp  test_process.cpp  test_runtime.cpp  test_uninstall.cpp
versions/: sherpa-onnx-sha  whisper-cpp-sha
